# pyMagmaProver

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
demo/: find_trivial_with_commutativity.py
eq3/: cli.py  composite_solver.py  equation_path.py  lean_utils.py  llm_based_solver.py  symbolic.py
eq3/tests/: test_cli.py  test_equation_path.py  test_equation_utils.py  test_llm_based_solver.py
proofs/: lake-manifest.json  lakefile.lean
proofs/.lake/config/[anonymous]/: lakefile.olean.trace
