[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pymagmaprover"
version = "0.1.0"
description = "Small proof and counterexample search tools for single-operation magma equations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.3.1",
    "networkx>=3",
    "python-dotenv>=1",
    "requests>=2",
    "z3-solver>=4.16",
]

[project.optional-dependencies]
demo = [
    "requests>=2",
    "tqdm>=4",
]
dev = [
    "mypy",
    "pytest",
    "types-networkx",
    "types-requests",
    "types-tqdm",
]

[project.scripts]
eq3 = "eq3.cli:main"

[tool.setuptools.packages.find]
include = ["eq3*"]

[tool.mypy]
python_version = "3.14"
files = ["eq3"]
exclude = ["^proofs/\\.lake/"]
check_untyped_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
